--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,15 +30,24 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  built_value: 8.9.2
+  provider: ^5.0.0
+  state_notifier: ^1.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
+
   cupertino_icons: ^1.0.8
+  http: ^1.2.2
 icons_plus: ^4.0.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner: 2.4.13
+  built_value_generator: 8.9.2
+  flutter_state_provider: 0.0.1
+  state_notifier: ^1.0.0
+
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -52,7 +61,6 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
